# UDATA-tesk-task

./: README.md  pyproject.toml
app/: database.py  models.py  settings.py
